--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ Pygments==2.19.2
 PyGObject==3.48.2
 PyJWT==2.10.1
 pylint==3.1.0
+PyNaCl==1.6.2
 pypdf==6.4.1
 pytest==9.0.1
 pytest-asyncio==1.3.0
